--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "main": "scr/index.js",
   "bin": {
     "page-loader": "bin/page-loader.js"
-    },
+  },
   "scripts": {
     "test": "npx jest"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.4.0",
     "axios": "^1.6.8",
     "commander": "^12.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.1.1",
+    "axios-debug-log": "^1.0.0",
+    "cheerio": "^1.0.0-rc.12",
+    "eslint": "^9.4.0",
     "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
-    "nock": "^13.5.4"
+    "listr": "^0.14.3",
+    "nock": "^13.5.4",
+    "prettier": "^3.2.5"
   }
 }
