--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "pageloader project",
-  "main": "scr/index.js",
+  "main": "src/index.js",
   "bin": {
     "page-loader": "bin/page-loader.js"
   },
