--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   "dependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.4.0",
-    "axios": "^1.6.8",
-    "commander": "^12.0.0"
+    "debug": "^4.3.1",
+    "axios": "^0.21.1",
+    "axios-debug-log": "^1.0.0",
+    "listr": "^0.14.3",
+    "commander": "^12.0.0",
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "axios-debug-log": "^1.0.0",
-    "cheerio": "^1.0.0-rc.12",
     "eslint": "^9.4.0",
     "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
-    "listr": "^0.14.3",
     "nock": "^13.5.4",
     "prettier": "^3.2.5"
   }
